# Job-Search

./: .env-template  .gitattributes  .gitignore  Dockerfile  README.md  applying.py  client.py  config.json  docker-compose.yaml  download.py  interest_filter.py  jobs.db  main.py  pyproject.toml  reading_filter.py  requirements.txt  server.py  sites.py  status.py
config/: config.json  config_fulltime.json
job_descriptions/: (Global Energy Petro) Geophysical Software Specialist-MatchaTalent-Software-Specialist-b03bf82217a1301f3db72edf1b289920.html  (Global Oil Petro) Geoscience Software Specialist-MatchaTalent-Software-Specialist-bbf01f1c99580f7c091830616d89f306.html  .NET Developer + with CCM Technologies - Quadient Inspire-Bluefin Resources Pty Limited-74692146.html  .NET Developer-Bluefin Resources Pty Limited-74572291.html  2 X Digital Infrastructure Specialist-Lime Recruitment-74210076.html  2 x Digital Infrastructure Specialist-Lime Recruitment-3c80a8e3e25cb654.html  2 x Software Developers (.NET)-Robert Half-74186250.html  2024 Associate Product Management (Computer Science) Summer Internship-GradConnection-2024-Associate-Product-aef6ac883ca3d68a01a32c0a12d96ee7.html  2024 Associate Product Management (Computer Science) Summer Internship-GradConnection-75082031.html  2024 Australian Indigenous Intern Campaign-BHP-74176106.html  2024 Australian Intern Campaign-BHP-74175927.html  2024 Capgemini Winter Internship-Capgemini-9d6a0b914f17a8a3.html  2024 Dive In Brisbane-Allens-7a01b25abcf34c9e.html  2024 Software Dev Engineer Intern - Brisbane, Grocery Shopping Experience-Amazon-Engineer-270c4137a503990374e174ee930d38cf.html  2024 Software Dev Engineer Intern - Brisbane, Grocery Shopping Experience-Amazon-Engineer-f617237b0b0ecb986c3d4c1513d6f0bd.html  2024 Software Development Graduate - ASAP start Brisbane-Cimic Group-2024-Software-Development-027dc50baf7dd501f04a63464784ec8d.html  2024 Software Development Graduate - ASAP start Brisbane-GradConnection-2024-Software-Development-789c60ca206ebf087d0669c8675539d8.html  2024 Software Development Graduate - ASAP start.-Amazon Commercial Services Pty Ltd-e854e527b72489e2.html  2024 Software Development Graduate - ASAP start.-Amazon-2024-Software-Development-975f487baab57c8b43fc4cf74e55ebfd.html  2024 Software Engineering (Computer Engineering) Summer Internship-GradConnection-2024-Software-Engineering-aafded72067184bcff03758a38c9c8dc.html  2024 Software Engineering (Computer Science) Summer Internship-GradConnection-75082680.html  2024_25 Cyber Summer Vacation Program - Brisbane-GradConnection-74443462.html  2025 ACIC Graduate Program-Australian Criminal Intelligence Commission-74178172.html  3D Artist-Chop Shop Post-73862347.html  (+2661 more)
(+853 files in other folders)
