[project]
name = "job-search"
version = "1.2.0"
description = "A project for searching and aggregating job listings."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "selenium-stealth>=1.0.6",
    "beautifulsoup4>=4.14.3",
    "tqdm>=4.66.3",
    "selenium>=4.32.0",
    "peewee>=3.19.0",
    "flask>=3.1.2",
    "waitress>=3.0.2",
    "psycopg2-binary>=2.9.10",
    "black>=25.12.0",
    "python-dotenv>=1.2.1",
    "apscheduler>=3.11.2",
    "peewee-enum-field>=0.2.0",
    "ollama>=0.6.1",
    "boto3>=1.42.47",
    "boto3-stubs~=1.42.47",
]

[project.scripts]
search = "job_search.search:search"
host = "job_search.flask_app:start"
summary = "job_search.create_summary:create_summary"
clean = "job_search.clean:clean"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"
