[project]
name = "job-search"
version = "1.2.2"
description = "A project for searching and aggregating job listings."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "selenium-stealth>=1.0.6",
    "beautifulsoup4>=4.15.0",
    "tqdm>=4.68.2",
    "selenium>=4.44.0",
    "peewee>=3.19.0",
    "flask>=3.1.3",
    "waitress>=3.0.2",
    "psycopg2-binary>=2.9.12",
    "black>=26.5.1",
    "python-dotenv>=1.2.2",
    "apscheduler>=3.11.2",
    "peewee-enum-field>=0.2.0",
    "ollama>=0.6.1",
    "boto3>=1.43.29",
    "boto3-stubs~=1.43.29",
    "requests>=2.34.2",
]

[project.scripts]
search = "job_search.search:search"
host = "job_search.flask_app:start"
summary = "job_search.utilities.create_summary:create_summary"
clean = "job_search.utilities.clean:clean"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"
